--- a/views/adminlogin.ejs
+++ b/views/adminlogin.ejs
@@ -28,7 +28,7 @@
                 <div class="layui-input-block">
                     <label>
                         <input type="password"
-                               style="border-radius: 15px;height: 60px;font-size: 16px; padding-left: 20px;"
+                               style="border-radius: 15px;height: 60px;font-size: 16px; padding-left: 20px; padding-right: 30px"
                                name="password" required lay-verify="required" placeholder="密码" autocomplete="off"
                                class="layui-input">
                     </label>
