--- a/views/details.ejs
+++ b/views/details.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
 <% include top/top.ejs %>
-<div class="layui-container">
+<div class="layui-container" style="margin: 20px">
     <% include details/baseModelDetails.ejs %>
     <% include bwList/black_white_list.ejs %>
 </div>
