--- a/views/details/baseModelDetails.ejs
+++ b/views/details/baseModelDetails.ejs
@@ -1,42 +1,42 @@
 <div class="layui-row">
     <form class="layui-form" action="">
-        <table class="layui-table" style="width: 800px; margin-left: 50px; margin-right: 50px; margin-top: 50px">
+        <table class="layui-table" style="margin-top: 50px; color: #000000; text-align: left">
             <thead>
             <tr>
-                <th style="font-weight: bold">指标</th>
-                <th style="font-weight: bold">基准值</th>
-                <th style="font-weight: bold">当前值</th>
-                <th style="color: red; font-weight: bold">拦截次数</th>
+                <th>指标</th>
+                <th>基准值</th>
+                <th>当前值</th>
+                <th>拦截次数</th>
             </tr>
             </thead>
             <tbody>
-            <td>当天呼叫次数 <br> (测试主叫 -> 测试被叫)</td>
+            <td style="font-size: 10px">当天呼叫次数 <br> (测试主叫 -> 测试被叫)</td>
             <td>
-                <label style="font-weight: bold" id="a1">...</label>
+                <label id="a1">...</label>
             </td>
             <td>
-                <label style="font-weight: bold" id="a2">...</label>
+                <label id="a2">...</label>
             </td>
-            <td style="color: red; font-weight: bold" id="a3">
+            <td id="a3">
                 1
             </td>
             </tbody>
         </table>
     </form>
 </div>
-<div id="refresh_icon" style="display: none; margin-left: 60px">
+<div id="refresh_icon" style="display: none; text-align: center; font-weight: bolder; padding: 17px">
     <i class="layui-icon layui-icon-loading-1 layui-anim layui-anim-rotate layui-anim-loop"></i>
     自动刷新中...
 </div>
-<div id="resume_icon" style="margin-left: 60px">
+<div id="resume_icon" style="text-align: center; font-weight: bolder; padding: 17px">
     <i class="layui-icon layui-icon-pause"></i>
     未开启自动刷新。
 </div>
 <div class="layui-row" style="text-align: center">
-    <button class="layui-btn layui-btn-radius" id="start">
+    <button class="layui-btn layui-btn-radius" id="start" style="background-color: #2D71DB; font-weight: lighter">
         <i class="layui-icon layui-icon-refresh-1"></i> 自动刷新
     </button>
-    <button class="layui-btn layui-btn-radius layui-btn-danger" id="resume">
+    <button class="layui-btn layui-btn-primary layui-border-red layui-btn-radius" id="resume" style="font-weight: lighter">
         <i class="layui-icon layui-icon-pause"></i> 暂停刷新
     </button>
 </div>
@@ -57,18 +57,20 @@
                 },
             });
         }
+        getCallCount();
         $.ajax({
             type: 'get',
             url: "http://<%= server_host %>/model/getBaseModel",
             headers: {token: localStorage.getItem('token')},
             success: function (res) {
                 if (res.code === 200) {
-                    std_anti_cnt = res.data.config['callFromSameNumToday']
+                    let std_anti_cnt = res.data.config['callFromSameNumToday']
                     $('#a1').html(std_anti_cnt);
                 }
             },
         });
         $('#start').on("click", function () {
+            window.clearInterval(interval)
             interval = window.setInterval(getCallCount, 1000)
             $('#refresh_icon').show()
             $('#resume_icon').hide()
