--- a/views/top/top.ejs
+++ b/views/top/top.ejs
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <body>
 <div class="layui-header header header-doc layui-row">
-    <div class="layui-col-xs4 layui-bg-black">
-        <ul class="layui-nav" lay-filter="" style="border-radius: 0">
-            <li class="layui-nav-item" style="text-align: center"><a id="123" href=""><img src="/images/favicon.ico"
-                                                                                           alt="" style="height: 32px"></a>
-            </li>
+    <div class="layui-col-xs4">
+        <ul class="layui-nav" lay-filter="" style="border-radius: 0;padding-left: 100px; background-color: #303030;">
+            <div class="layui-nav-item" style="text-align: center">
+                <img src="/images/umbrella.png" alt="" style="height: 20px">
+            </div>
         </ul>
     </div>
     <div class="layui-col-xs8">
-        <ul class="layui-nav" lay-filter="" style="text-align: right; border-radius: 0; padding-right: 100px">
+        <ul class="layui-nav" lay-filter="" style="text-align: right; border-radius: 0;padding-right: 100px; background-color: #303030">
             <li id="login_status" class="layui-nav-item">
-                <a id="username" href=""></a>
-                <dl class="layui-nav-child" style="text-align: center"> <!-- 二级菜单 -->
-                    <dd><a href="/base_config">基础模型设置</a></dd>
-                    <dd><a href="/details">模拟监控信息</a></dd>
-                    <dd><a href="/success">模拟拨打</a></dd>
-                    <hr>
-                    <dd><a id="logout_btn" href="">注销</a></dd>
+                <a id="username" href="" style="font-size: 12px;"></a>
+                <dl class="layui-nav-child" style="text-align: center; border-radius: 10px"> <!-- 二级菜单 -->
+                    <dd><a href="/base_config" style="font-size: 12px;">基础模型设置</a></dd>
+                    <dd><a href="/details" style="font-size: 12px;">模拟监控信息</a></dd>
+                    <dd><a href="/success" style="font-size: 12px;">模拟拨打</a></dd>
+                    <hr style="margin: 7px; background-color: #d2d2d7">
+                    <dd><a id="logout_btn" href="" style="font-size: 12px;">注销</a></dd>
                 </dl>
             </li>
         </ul>
