--- a/views/admin/details.ejs
+++ b/views/admin/details.ejs
@@ -7,10 +7,10 @@
     <title>防骚扰 - 模拟测试</title>
 </head>
 <body>
-<% include top/top.ejs %>
+<% include ../top/admin_top.ejs %>
 <div class="layui-container" style="margin: 20px">
-    <% include details/baseModelDetails.ejs %>
-    <% include bwList/black_white_list.ejs %>
+    <% include ../details/baseModelDetails.ejs %>
+    <% include ../bwList/black_white_list.ejs %>
 </div>
 </body>
 </html>
