--- a/views/admin/success.ejs
+++ b/views/admin/success.ejs
@@ -7,7 +7,7 @@
     <title>防骚扰 - 模拟测试</title>
 </head>
 <body>
-<% include top/top.ejs %>
+<% include ../top/admin_top.ejs %>
 <div class="layui-container" style="text-align: center; margin: 20px">
     <div class="layui-col-md3">
         <div class="layui-row" style="padding: 5px; margin-top: 45px; text-align: left">
@@ -29,7 +29,7 @@
 
     </div>
     <div class="layui-col-md9">
-        <% include details/baseModelDetails.ejs %>
+        <% include ../details/baseModelDetails.ejs %>
     </div>
 </div>
 </body>
