--- a/views/admin/baseModelConfig.ejs
+++ b/views/admin/baseModelConfig.ejs
@@ -7,7 +7,7 @@
     <title>防骚扰-基础模型设置</title>
 </head>
 <body>
-<% include top/top.ejs %>
+<% include ../top/admin_top.ejs %>
 <div class="layui-container">
     <form class="layui-form" action="">
         <table class="layui-table" style="width: 800px; margin-left: 50px; margin-right: 50px; margin-top: 50px">
