--- a/views/top/admin_top.ejs
+++ b/views/top/admin_top.ejs
@@ -13,9 +13,9 @@
             <li id="login_status" class="layui-nav-item">
                 <a id="username" href="" style="font-size: 12px;"></a>
                 <dl class="layui-nav-child" style="text-align: center; border-radius: 10px"> <!-- 二级菜单 -->
-                    <dd><a href="/base_config" style="font-size: 12px;">基础模型设置</a></dd>
-                    <dd><a href="/details" style="font-size: 12px;">模拟监控信息</a></dd>
-                    <dd><a href="/success" style="font-size: 12px;">模拟拨打</a></dd>
+                    <dd><a href="/admin/base_config" style="font-size: 12px;">基础模型设置</a></dd>
+                    <dd><a href="/admin/details" style="font-size: 12px;">模拟监控信息</a></dd>
+                    <dd><a href="/admin/success" style="font-size: 12px;">模拟拨打</a></dd>
                     <hr style="margin: 7px; background-color: #d2d2d7">
                     <dd><a id="logout_btn" href="" style="font-size: 12px;">注销</a></dd>
                 </dl>
@@ -30,7 +30,7 @@
         if (localStorage.getItem('token') === null) {
             $('#login_status').html('<a id="login_status" href="">未登录</a>')
             if (window.location.pathname !== '/login') {
-                window.location.href = '/login'
+                window.location.href = '/admin/login'
             }
         } else {
             $('#username')
